# Config-Generator

./: Cargo.toml  LICENSE  example-config.yml
src/: main.rs
templates/: config_template.stpl
